fix(ai): enhance coaching recommendation synthesis and biometric heuristics